# metaextract

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
debian/: changelog  control  copyright  rules
src/metaextract/: __init__.py  __main__.py  cli.py
src/metaextract/core/: __init__.py  config.py  exceptions.py  models.py
src/metaextract/download/: __init__.py  downloader.py
src/metaextract/export/: __init__.py  html.py  json.py
src/metaextract/export/templates/: report.html.j2
src/metaextract/extractors/: __init__.py  base.py  docx.py  legacy_office.py  openoffice.py  pdf.py  pptx.py  xlsx.py
src/metaextract/processing/: __init__.py  processor.py
src/metaextract/search/: __init__.py  base.py  duckduckgo.py  parser.py
tests/: __init__.py
