[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metaextract"
version = "3.0.0"
description = "A tool for extracting metadata from public documents (pdf, doc, xls, ppt, etc.) on a target domain"
readme = "README.md"
license = "GPL-2.0-only"
requires-python = ">=3.12"
authors = [
    { name = "Christian Martorella", email = "cmartorella@edge-security.com" },
]
maintainers = [
    { name = "Andrea Ceresoni", email = "andrea.ceresoni@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
keywords = ["osint", "metadata", "security", "reconnaissance", "metaextract"]

dependencies = [
    "aiohttp>=3.9.0",
    "pdfminer.six>=20231228",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.2",
    "python-pptx>=0.6.23",
    "olefile>=0.47",
    "lxml>=5.1.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "jinja2>=3.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
metaextract = "metaextract.cli:main"

[project.urls]
Homepage = "https://github.com/laramies/metagoofil"
Repository = "https://github.com/laramies/metagoofil.git"

[tool.hatch.build.targets.wheel]
packages = ["src/metaextract"]

[tool.ruff]
target-version = "py312"
line-length = 100
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ARG",
    "SIM",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
